Change export link icon

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -6530,6 +6530,10 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   height: 14px;
   width: 15px; }
+.icon__export {
+  background-image: image-url("icons/export.png");
+  height: 16px;
+  width: 16px; }
 
 .datepicker td, .datepicker th {
   text-align: center;
