--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -9,7 +9,7 @@
       <div class="small-2 large-2 columns">
         <%= social_share_button_tag(@event.title) %>
       </div>
-      <div class="small-2 large-1 columns end"><a href="#"><span class="icon icon__print">Imprimir</span></a></div>
+      <div class="small-2 large-1 columns end"><a href="#" onclick="window.print();"><span class="icon icon__print">Imprimir</span></a></div>
     </div>
 
   </div>
