--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -16,7 +16,7 @@
 
     <div class="tools">
       <%= t('main.get_updates')%><a href="<%= current_url(:format=>:atom)%>"><span class="icon icon__feed"></span> feed</a>
-      <a class="right dib dn hide-for-small-only" href="<%= current_url(:format=>:csv)%>"><span class="icon icon__print"></span> <%= t('main.export')%></a>
+      <a class="right dib dn hide-for-small-only" href="<%= current_url(:format=>:csv)%>"><span class="icon icon__export"></span> <%= t('main.export')%></a>
     </div><!-- .tools -->
 
     <div class="row">
