--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    <title><%= content_for?(:title) ? yield(:title) : "Agendas" %></title>
+    <title><%= content_for?(:title) ? t('site_title') + yield(:title) : t('site_title') %></title>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
