--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <h3><%= @user.full_name_comma %></h3>
 <%= link_to t('backend.back'), users_path , :class=> "button tiny radius" %>
-<%= link_to t('backend.edit'), edit_user_path(@user), :class=> "button tiny radius success" %>
+<%= link_to t('backend.manage_agendas'), edit_user_path(@user), :class=> "button tiny radius success" %>
 <fieldset>
   <legend><%= t('backend.basic_data') %></legend>
   <p><strong><%= t('backend.first_name') %>:</strong> <%= @user.first_name %></p>
   <p><strong><%= t('backend.last_name') %>:</strong> <%= @user.last_name %></p>
-  <p><strong><%= t('backend.role') %>:</strong> <%= @user.role.capitalize %></p>
+  <p><strong><%= t('backend.role') %>:</strong> <%= t("backend.#{@user.role}").capitalize %></p>
 </fieldset>
 <fieldset>
   <legend><%= t('backend.managed_positions') %></legend>
