--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,10 +8,10 @@
   <table id="listing" class="display" cellpadding="0" width="100%">
     <thead>
     <tr>
-      <th><%= t('backend.name')%></th>
-      <th><%= t('backend.role')%></th>
-      <th><%= t('backend.managed_positions')%></th>
-      <th><%= t('backend.actions')%></th>
+      <th width="40%"><%= t('backend.name')%></th>
+      <th width="15%"><%= t('backend.role')%></th>
+      <th width="35%"><%= t('backend.managed_positions')%></th>
+      <th width="10%"><%= t('backend.actions')%></th>
     </tr>
     </thead>
     <tfoot>
