--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -76,5 +76,5 @@
     </fieldset>
   <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
 <% end %>
-<%= tinymce %>
+<%= tinymce :language => I18n.locale %>
 <%= javascript_include_tag 'events'%>
