--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,20 +1,30 @@
 <footer class="footer" role="contentinfo">
-      <div class="row">
-        <div class="small-12 large-3 mb20 columns">
-          <h4 class="title-m">Gobierno <strong>abierto</strong></h4>
-          <p>La ciudad que quieres, será la ciudad que quieras. Obtén aquí más información sobre esta página. Este Portal de Gobierno Abierto es <a href="#">software libre AGPLv3</a>, y su código se encuentra en <a href="https://github.com/ayuntamientomadrid">https://github.com/ayuntamientomadrid</a>. De Madrid, para el mundo entero.</p>
-        </div>
-        <div class="small-12 large-3 mb20 columns">
-          <h4 class="title-m">Participación</h4>
-          <p>Decide cómo debe ser la ciudad de Madrid que quieres.</p>
-        </div>
-        <div class="small-12 large-3 mb20 columns">
-          <h4 class="title-m">Transparencia</h4>
-          <p>Obtén cualquier información sobre el Ayuntamiento de Madrid.</p>
-        </div>
-        <div class="small-12 large-3 mb20 columns">
-          <h4 class="title-m">Datos Abiertos</h4>
-          <p>Todos los datos del Ayuntamiento son tuyos.</p>
-        </div>
-      </div>
-    </footer>
+  <div class="row">
+    <div class="small-12 large-3 mb20 columns">
+      <h1 class="title-m"><strong><%= t('header.open_goverment') %></strong></h1>
+      <p>
+        <%= t('footer.description',
+            open_source: link_to(t('footer.open_source'), t('footer.open_source_url'), target: '_blank'),
+            consul:  link_to(t('footer.consul'), t('footer.consul_url'), target: '_blank')).html_safe %>
+      </p>
+    </div>
+    <div class="small-12 large-3 mb20 columns">
+      <h4 class="title-m">
+        <a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a>
+      </h4>
+      <p><%= t('footer.participation_text')%></p>
+    </div>
+    <div class="small-12 large-3 mb20 columns">
+      <h4 class="title-m">
+        <a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a>
+      </h4>
+      <p><%= t('footer.transparency_text')%></p>
+    </div>
+    <div class="small-12 large-3 mb20 columns">
+      <h4 class="title-m">
+        <a href="<%= t('header.open_data_url') %>" target="_blank"><%= t('header.open_data') %></a>
+      </h4>
+      <p><%= t('footer.open_data_text')%></p>
+    </div>
+  </div>
+</footer>
