--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,17 +5,22 @@
     </div>
     <div class="small-6 columns text-right">
       <ul class="header__menu">
-        <li><a href="https://decide.madrid.es/" target="_blank" ><%= t('header.participation') %></a></li>
-        <li><a href="https://decide.madrid.es/transparency" target="_blank"><%= t('header.transparency') %></a></li>
-        <li><a href="https://decide.madrid.es/opendata" target="_blank"><%= t('header.open_data') %></a></li>
+        <li><a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a></li>
+        <li><a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a></li>
+        <li><a href="<%= t('header.open_data_url') %>" target="_blank"><%= t('header.open_data') %></a></li>
       </ul>
     </div>
   </div>
-  <div class="row">
-    <div class="small-12 columns hide-for-small-only">
-      <div class="header__base">
-        <%= image_tag 'madrid.png', class: 'header__imago', alt:'¡Madrid'%>
-        <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong><%= t('header.transparency') %></h1>
+
+  <div class="top_bar_box">
+    <div class="row">
+      <div class="small-12 columns hide-for-small-only">
+        <div class="header__base">
+        <%= link_to root_path do %>
+          <%= image_tag 'header_logo_madrid.png', class: 'header__imago', alt:'¡Madrid'%>
+          <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong><%= t('header.transparency') %></h1>
+        </div>
+        <% end %>
       </div>
     </div>
   </div>
@@ -23,16 +28,15 @@
 
   <nav class="top-bar show-for-small-only" data-topbar role="navigation">
     <div class="header__base">
-      <%= image_tag('madrid.png', class: 'left', size: '96x96') %>
-      <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong> <%= t('header.transparency') %></h1>
+      <h1 class="header__title"><strong><%= t('header.open_goverment') %></strong> <%= link_to t('header.transparency'),root_path %></h1>
     </div>
     <div class="toggle-topbar menu-icon"><a href="#"><span></span></a></div>
     <section class="top-bar-section">
       <ul>
         <%#= language_selection %>
-        <li><a href="https://decide.madrid.es/" target="_blank" ><%= t('header.participation') %></a></li>
-        <li><a href="https://decide.madrid.es/transparency" target="_blank"><%= t('header.transparency') %></a></li>
-        <li><a href="https://decide.madrid.es/opendata" target="_blank"><%= t('header.open_data') %></a></li>
+        <li><a href="<%= t('header.participation_url') %>" target="_blank"><%= t('header.participation') %></a></a></li>
+        <li><a href="<%= t('header.transparency_url') %>" target="_blank"><%= t('header.transparency') %></a></li>
+        <li><a href="<%= t('header.open_data_url') %>" target="_blank"><%= t('header.open_data') %></a></li>
       </ul>
     </section>
   </nav>
