--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,8 +22,12 @@
       <%= f.text_area :description, class: 'tinymce'%>
       <%= f.label :scheduled, t('backend.date') %>
       <%= f.text_field :scheduled, class: 'fdatepicker' %>
+      <% if @holders.count > 1 %>
       <%= f.label :position_id, t('backend.main_position') %>
-      <%= f.select :position_id, @holders.order(:last_name).map{|holder| [holder.full_name_comma, holder.positions.current.first.id]}, prompt: t('backend.select') if @holders.count > 1 %>
+      <%= f.select :position_id, @holders.order(:last_name).map{|holder| [holder.full_name_comma, holder.current_position.id]}, prompt: t('backend.select') %>
+      <% else %>
+      <%= f.hidden_field :position_id, value: @holders.first.current_position.id %>
+      <% end %>
     </fieldset>
 
     <fieldset><!-- Participants -->
