Event scheduled date format

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -40,7 +40,7 @@
           <%= event.position.title.titleize %> ·
           <%= event.position.area.title.titleize %>
         </strong></p>
-        <p><%= I18n.l event.scheduled, :format => :complete %></p>
+        <p><%= I18n.l event.scheduled, format: :complete %></p>
       </article>
     <% end %>
   </div>
