--- a/app/views/visitors/show.html.erb
+++ b/app/views/visitors/show.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="small-12 large-8 columns">
 
-    <strong class="post__date"><%= I18n.l @event.scheduled, :format => :complete %></strong>
+    <strong class="post__date"><%= I18n.l @event.scheduled, format: :complete %></strong>
 
     <h2 class="post__title-big"><%= @event.title %></h2>
 
