--- a/app/assets/javascripts/events_listings.js.erb
+++ b/app/assets/javascripts/events_listings.js.erb
@@ -1,7 +1,6 @@
 $(function(){
   $('#listing').DataTable( {
-    "order": [[ 0, "asc" ]],
+    "order": [[ 0, "desc" ]],
     "language":{"url": "/locales/dataTables.<%= I18n.locale %>.json"}
   });
 });
-
