--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -49,5 +49,5 @@
     </tbody>
   </table>
 </div>
-<%= javascript_include_tag 'admin_listings' %>
+<%= javascript_include_tag 'events_listings' %>
 
