Use custom titleize to show position and area

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -38,7 +38,7 @@
         <p><strong>
           <%= show_agenda_link(event.position.holder) %> ·
           <%= event.position.title.custom_titleize %> ·
-          <%= event.position.area.title.titleize %>
+          <%= event.position.area.title.custom_titleize %>
         </strong></p>
         <p><%= I18n.l event.scheduled, format: :complete %></p>
       </article>
