--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,8 @@
   </h1>
 </div>
 <div class="row">
-  <table id="listing" class="display" cellpadding="0" width="100%">
+  <%= will_paginate @users, params: params , renderer: FoundationPagination::Rails,previous_label: '&laquo;', next_label: '&raquo;' %>
+  <table class="display" cellpadding="0" width="100%">
     <thead>
     <tr>
       <th width="40%"><%= t('backend.name')%></th>
@@ -50,7 +51,5 @@
     <% end %>
     </tbody>
   </table>
+  <%= will_paginate @users, params: params , renderer: FoundationPagination::Rails,previous_label: '&laquo;', next_label: '&raquo;' %>
 </div>
-
-<%= javascript_include_tag 'admin_listings' %>
-
