Improve design at iexplorer

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,6 +12,7 @@
     <!--[if lt IE 9]>
       <%= javascript_include_tag 'dependencies/html5shiv.min' %>
       <%= javascript_include_tag 'dependencies/respond.min' %>
+      <%= javascript_include_tag 'ie_lt9' %>
     <![endif]-->
     <link rel="shortcut icon" type="image/x-icon" href="" />
   </head>
