--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
     <!--[if lt IE 9]>
       <%= javascript_include_tag 'dependencies/html5shiv.min' %>
       <%= javascript_include_tag 'dependencies/respond.min' %>
-    <![endif]-->
+      <%= javascript_include_tag 'ie_lt9' %>
+     <![endif]-->
   </head>
   <body class="">
     <%= render 'layouts/header' %>
