Change event permissions of user who manage holders

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,11 +23,11 @@
       <%= f.label :scheduled, t('backend.date') %>
       <%= f.text_field :scheduled, class: 'fdatepicker' %>
       <%= f.label :position_id, t('backend.main_position') %>
-      <% if @holders.count > 1 %>
-      <%= f.select :position_id, @holders.order(:last_name).map{|holder| [holder.full_name_comma, holder.current_position.id]}, prompt: t('backend.select') %>
+      <% if @positions.count > 1 %>
+          <%= f.select :position_id, @positions.map{|position| [position.holder.full_name_comma+' - '+position.title, position.id]}, prompt: t('backend.select') %>
       <% else %>
-      <p><strong><%= @holders.first.full_name %></strong></p>
-      <%= f.hidden_field :position_id, value: @holders.first.current_position.id %>
+          <p><strong><%= @holders.first.full_name %></strong></p>
+          <%= f.hidden_field :position_id, value: @positions.first.id %>
       <% end %>
     </fieldset>
 
