--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -50,7 +50,10 @@
     </li>
     <li>
       <%= link_to destroy_user_session_path, method: :delete do %>
-          <i class="fi-arrow-left size-18"> <%= t("backend.logout")%></i>
+          <i class="fi-arrow-left size-18">
+          <%= t("backend.logout")%>
+           - (<%= current_user.full_name%>)
+          </i>
       <% end %>
     </li>
   </ul>
