--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -49,7 +49,7 @@
 <div class="row">
   <div class="small-12 large-7 small-offset-1 columns right mb20">
     <div class="text-center">
-      <%= will_paginate @events.results, params: params , renderer: FoundationPagination::Rails,previous_label: '&laquo;', next_label: '&raquo;' %>
+      <%= paginate @events.hits%>
     </div>
   </div>
   <!--
