--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,17 @@
   <%= @event.description.html_safe %>
 </fieldset>
 <fieldset>
+  <legend><%= t('backend.event_history_updates') %></legend>
+  <div class="row">
+    <div class="small-6 columns"><strong><%= t('backend.event_update_user') %></strong></div>
+    <div class="small-6 columns"><strong><%= t('backend.event_update_date') %></strong></div>
+  </div>
+  <div class="row">
+    <div class="small-6 columns"><%= @event.user.full_name %></div>
+    <div class="small-6 columns"><%= @event.updated_at.strftime(t('time.formats.short')) %></div>
+  </div>
+</fieldset>
+<fieldset>
   <legend><%= t('backend.participants') %></legend>
   <div class="row">
     <div class="small-4 columns"><strong><%= t('backend.name') %></strong></div>
