--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,11 +1,7 @@
 <div class="row">
-  <h1>
-    <%= t('backend.entries')%> (<%= @activities.count %>)
-  </h1>
-</div>
-<div class="row">
+  <%= page_entries_info @activities%>
   <%= paginate @activities%>
-  <table class="display" cellpadding="0" width="100%">
+  <table class="event">
     <thead>
     <tr>
       <th><%= t('backend.date')%></th>
@@ -25,10 +21,16 @@
     <tbody>
     <% @activities.each do |activity| %>
         <tr>
-          <td><%= activity.created_at %></td>
-          <td><%= link_to activity.owner.full_name, user_path(activity.owner) if activity.owner.present? %></td>
-          <td><%= link_to activity.trackable.title, event_path(activity.trackable) if activity.trackable.present? %></td>
-          <td><%= activity.key %></td>
+          <td class="event_date"><%= activity.created_at.to_time.strftime(t('time.formats.short')) %></td>
+          <td class="event_holder"><%= link_to activity.owner.full_name, user_path(activity.owner) if activity.owner.present? %></td>
+          <td class="event_txt">
+            <% if activity.trackable.present? %>
+              <%= link_to activity.trackable.title, event_path(activity.trackable)%>
+            <% else %>
+              <%= activity.title%>
+            <% end %>
+          </td>
+          <td class="event_actions"><%= t(activity.key) %></td>
         </tr>
     <% end %>
     </tbody>
