--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -48,6 +48,11 @@
           <i class="fi-arrow-right size-18"> <%= t("backend.frontend")%></i>
       <% end %>
     </li>
+    <li class="<%= active_menu('edit_user_passwords') %>">
+      <%= link_to edit_user_passwords_path do %>
+          <i class="fi-key size-18"> <%= t("backend.change_password")%></i>
+      <% end %>
+    </li>
     <li>
       <%= link_to destroy_user_session_path, method: :delete do %>
           <i class="fi-arrow-left size-18">
