--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,23 +1,25 @@
-<h2><%= t("backend.change_password") %></h2>
+<h1><%= t("backend.change_password") %></h1>
 
-<%= form_for(resource, as: resource_name, url: user_password_registration_path(), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: user_password_registration_path(), html: { method: :put, class: 'admin-form'}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label(:password, t("backend.password")) %>
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <fieldset>
+    <legend><%= t('backend.basic_data') %></legend>
+    <div class="field">
+      <%= f.label(:password, t("backend.password")) %>
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label(:password_confirmation, t("backend.password_confirmation")) %>
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "#{t("backend.save")}", class: "button radius success right" %>
-  </div>
+    <div class="field">
+      <%= f.label(:password_confirmation, t("backend.password_confirmation")) %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :current_password %>
+      <%= f.password_field :current_password, autocomplete: "off" %>
+    </div>
+  </fieldset>
+    
+  <%= f.submit "#{t("backend.save")}", class: "button radius success right" %>
 <% end %>
