--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -16,6 +16,13 @@
       </a>
     </li>
     <% if current_user.admin? %>
+    <li class="<%= active_menu('admin/organizations') %>">
+      <a href="<%= admin_organizations_path %>">
+        <i class="fi-calendar size-18"> Organizaciones</i>
+      </a>
+    </li>
+    <% end %>
+    <% if current_user.admin? %>
     <li class="<%= active_menu('areas') %>">
       <a href="<%= areas_path %>">
         <i class="fi-web size-18"> <%= t("backend.areas")%></i>
