Spec fixed because the UI messages has changed. Some I18n text added. Path after updating password set.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,7 @@
     </div>
     
     <div class="field">
-      <%= f.label :current_password %>
+      <%= f.label(:current_password, t("backend.current_password")) %>
       <%= f.password_field :current_password, autocomplete: "off" %>
     </div>
   </fieldset>
