_admin_menu.html.erb link to change password active when users go to change password page.

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -48,7 +48,7 @@
           <i class="fi-arrow-right size-18"> <%= t("backend.frontend")%></i>
       <% end %>
     </li>
-    <li class="<%= active_menu('edit_user_passwords') %>">
+    <li class="<%= active_menu('users/registrations') %>">
       <%= link_to edit_user_passwords_path do %>
           <i class="fi-key size-18"> <%= t("backend.change_password")%></i>
       <% end %>
