--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <fieldset>
-    <legend><%= t('backend.basic_data') %></legend>
+    <legend><%= t('backend.modify') %></legend>
     <div class="field">
       <%= f.label(:password, t("backend.password")) %>
       <%= f.password_field :password, autocomplete: "off" %>
