--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -1,27 +1,45 @@
 <div id="<%= dom_id(f.object) %>" class="nested-fields">
   <%= f.hidden_field :id %>
+  <div class="small-6 columns">
+    <%= f.label :identifier %>
+    <%= f.text_field :identifier %>
+  </div>
 
-  <%= f.label :identifier %>
-  <%= f.text_field :identifier %>
+  <div class="small-6 columns">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <div class="small-6 columns">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
 
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+  <div class="small-6 columns">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div>
 
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
+  <div class="small-6 columns">
+    <%= f.label :from %>
+    <%= f.date_field :from %>
+  </div>
 
-  <%= f.label :from %>
-  <%= f.date_field :from %>
+  <div class="small-6 columns">
+    <%= f.label :to %>
+    <%= f.date_field :to %>
+  </div>
 
-  <%= f.label :to %>
-  <%= f.date_field :to %>
+  <div class="small-12 columns">
+    <%= f.label :public_assignments %>
+    <%= f.text_area :public_assignments %>
+  </div>
 
-  <%= f.label :public_assignments %>
-  <%= f.text_area :public_assignments %>
-  <small>Solo rellenar el campo en caso de cumplir la pregunta.</small>
+  <div class="small-12 columns">
+    <small>Solo rellenar el campo en caso de cumplir la pregunta.</small>
+    <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
+    <hr />
+  </div>
 
-  <%= link_to_remove_association "Eliminar", f %>
+
 </div>
