--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -1,151 +1,87 @@
-<%= form_for [:admin, @organization] do |f| %>
+<%= form_for [:admin, @organization], html: {class: 'organization-form'} do |f| %>
 
-  <%# DATOS %>
-  <%= f.label :reference %>
-  <%= f.text_field :reference %>
+<% if @organization.errors.any? %>
+    <div class="panel callout radius">
+      <strong><%= t('activerecord.errors.template.header',
+:model => Organization.model_name.human, :count => @organization.errors.count) %></strong>
+      <ul>
+        <% @organization.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+<% end %>
 
-  <%= f.label :identifier %>
-  <%= f.text_field :identifier %>
+  <%= render 'reference', f:f %>
+  <%= render 'data', f:f %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
-
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
-
-  <%= f.label :phones %>
-  <%= f.text_field :phones %>
-
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-
-  <%= f.label :category_id %>
-  <%= f.select :category_id, options_for_select(Category.all.map{|c| [c.name, c.id]}), prompt: t('backend.none') %>
-
-  <%= f.label :web %>
-  <%= f.text_field :web %>
-
-  <%= f.label :address_type %>
-  <%= f.text_field :address_type %>
-
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-
-  <%= f.label :number %>
-  <%= f.text_field :number %>
-
-  <%= f.label :gateway %>
-  <%= f.text_field :gateway %>
-
-  <%= f.label :stairs %>
-  <%= f.text_field :stairs %>
-
-  <%= f.label :floor %>
-  <%= f.text_field :floor %>
-
-  <%= f.label :door %>
-  <%= f.text_field :door %>
-
-  <%= f.label :postal_code %>
-  <%= f.text_field :postal_code %>
-
-  <%= f.label :town %>
-  <%= f.text_field :town %>
-
-  <%= f.label :province %>
-  <%= f.text_field :province %>
-
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-
-  <%= f.label :registered_lobbies %>
-  <%= f.select :registered_lobbies, Organization.registered_lobbies.keys.to_a %>
-
-  <%# REPRESENTANTE LEGAL %>
-  <div id="nested-legal-representant">
-    <%= f.fields_for :legal_representant do |legal_representant_builder| %>
-      <%= render 'legal_representant_fields', f: legal_representant_builder %>
-    <% end %>
-  </div>
-
-  <%= link_to_add_association "Añadir legal representant", f, :legal_representant,
-                              partial: "legal_representant_fields",
-                              id: "legal_representant_link",
-                              data: {
-                                association_insertion_node: "#nested-legal-representant",
-                                association_insertion_method: "append"
-                              } %>
-
-
-  <%# PERSONA FISICA DE CONTACTO %>
-  <div id="nested-user">
-    <%= f.fields_for :user do |user_builder| %>
-      <%= render 'user_fields', f: user_builder %>
-    <% end %>
-  </div>
-
-  <%# DATOS LOBBY CUENTA PROPIA %>
-  <%= f.label :fiscal_year %>
-  <%= f.number_field :fiscal_year %>
-
-  <%= f.label :range_funds %>
-  <%= f.select :range_funds, Organization.range_funds.keys.to_a %>
-
-  <%= f.label :subvention do %>
-    subvention
-    <%= f.check_box :subvention %>
+  <%= f.fields_for :legal_representant do |legal_representant_builder| %>
+    <%= render 'legal_representant' , f:legal_representant_builder %>
   <% end %>
 
-  <%= f.label :contract do %>
-    contract
-    <%= f.check_box :contract %>
-  <% end %>
+  <fieldset>
+    <legend>Persona fisica de contacto</legend>
+    <div class="row">
+      <div id="nested-user">
+        <%= f.fields_for :user do |user_builder| %>
+          <%= render 'user_fields', f: user_builder %>
+        <% end %>
+      </div>
+    </div>
+  </fieldset>
+
+  <%= render 'lobbies_data', f:f %>
 
   <%# DATOS LOBBY CUENTA AJENA %>
-  <div id="nested-represented-entities">
-    <%= f.fields_for :represented_entities do |represented_entities_builder| %>
-      <%= render 'represented_entities_fields', f: represented_entities_builder %>
-    <% end %>
-  </div>
+  <fieldset>
+    <legend>Datos personas o entidades sin personalidad a quines se va a representar</legend>
+    <div class="row">
+      <div id="nested-represented-entities">
+        <%= f.fields_for :represented_entities do |represented_entities_builder| %>
+          <%= render 'represented_entities_fields', f: represented_entities_builder %>
+        <% end %>
+      </div>
+      <div class="small-12 columns">
+        <%= link_to_add_association "Añadir Entidades a las que se representa", f, :represented_entities,
+                                  partial: "represented_entities_fields",
+                                  id: "represented_entities_link",
+                                  class: "button tiny radius info",
+                                  data: {
+                                    association_insertion_node: "#nested-represented-entities",
+                                    association_insertion_method: "append"
+                                  } %>
+      </div>
+    </div>
+  </fieldset>
 
-  <%= link_to_add_association "Añadir Entidades a las que se representa", f, :represented_entities,
-                              partial: "represented_entities_fields",
-                              id: "represented_entities_link",
-                              data: {
-                                association_insertion_node: "#nested-represented-entities",
-                                association_insertion_method: "append"
-                              } %>
+  <%= render 'interest', f:f %>
 
-  <%# AREAS DE INTERES %>
-  <%= f.collection_check_boxes :interest_ids, Interest.all, :id, :name %>
-  
   <%# AGENTS %>
-  <div id="nested-agents">
-    <%= f.fields_for :agents do |agents_builder| %>
-      <%= render 'agents_fields', f: agents_builder %>
-    <% end %>
-  </div>
+  <fieldset>
+    <legend>Agentes</legend>
+    <div class="row">
+        <div id="nested-agents">
+          <%= f.fields_for :agents do |agents_builder| %>
+            <%= render 'agents_fields', f: agents_builder %>
+          <% end %>
+        </div>
 
-  <%= link_to_add_association "Añadir Agentes", f, :agents,
-                              partial: "agents_fields",
-                              id: "agents_link",
-                              data: {
-                                association_insertion_node: "#nested-agents",
-                                association_insertion_method: "append"
-                              } %>
+      <div class="small-12 columns">
+        <%= link_to_add_association "Añadir Agentes", f, :agents,
+                                  partial: "agents_fields",
+                                  id: "agents_link",
+                                  class: "button tiny radius info",
+                                  data: {
+                                    association_insertion_node: "#nested-agents",
+                                    association_insertion_method: "append"
+                                  } %>
 
-  <%= f.label :denied_public_data do %>
-    denied_public_data
-    <%= f.check_box :denied_public_data %>
-  <% end %>
+      </div>
+    </div>
+  </fieldset>
 
-  <%= f.label :denied_public_events do %>
-    denied_public_events
-    <%= f.check_box :denied_public_events %>
-  <% end %>
+  <%= render 'terms', f:f %>
 
-  <%= f.submit %>
+  <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
 <% end %>
+<%= javascript_include_tag 'organizations'%>
