--- a/app/views/admin/organizations/_user_fields.html.erb
+++ b/app/views/admin/organizations/_user_fields.html.erb
@@ -1,24 +1,39 @@
 <div id="<%= dom_id(f.object) %>" class="nested-fields">
+
   <%= f.hidden_field :id %>
-  <%= f.hidden_field :role, value: :lobby %>
-  <%= f.hidden_field :active, value: 1 %>
+  <div class="small-6 columns">
+    <%= f.hidden_field :role, value: :lobby %>
+    <%= f.hidden_field :active, value: 1 %>
+  </div>
 
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+  <div class="small-6 columns">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
 
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
+  <div class="small-6 columns">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div>
 
-  <%= f.label :phones %>
-  <%= f.text_field :phones %>
+  <div class="small-6 columns">
+    <%= f.label :phones %>
+    <%= f.text_field :phones %>
+  </div>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+  <div class="small-6 columns">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
 
-  <%= f.label :password %>
-  <%= f.text_field :password %>
+  <div class="small-6 columns">
+    <%= f.label :password %>
+    <%= f.text_field :password %>
+  </div>
 
-  <%= f.label :password_confirmation %>
-  <%= f.text_field :password_confirmation %>  
+  <div class="small-6 columns">
+    <%= f.label :password_confirmation %>
+    <%= f.text_field :password_confirmation %>
+  </div>
 
 </div>
