Added organization index files for admins

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -18,7 +18,7 @@
     <% if current_user.admin? %>
     <li class="<%= active_menu('admin/organizations') %>">
       <a href="<%= admin_organizations_path %>">
-        <i class="fi-calendar size-18"> Organizaciones</i>
+        <i class="fi-book size-18"> <%= t("backend.companies")%></i>
       </a>
     </li>
     <% end %>
